--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-toolchains",
+  "name": "choice-js",
   "private": true,
   "version": "0.0.0",
   "description": "shareable eslint config for choice",
@@ -12,21 +12,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/choicetopay/js-toolchains.git"
+    "url": "git+ssh://git@github.com/choicetopay/choice-js.git"
   },
   "author": "Choice Limited",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/choicetopay/js-toolchains/issues"
+    "url": "https://github.com/choicetopay/choice-js/issues"
   },
-  "homepage": "https://github.com/choicetopay/js-toolchains#readme",
+  "homepage": "https://github.com/choicetopay/choice-js#readme",
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.3",
@@ -35,11 +34,12 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.17.1",
-    "typescript": "~3.4.5"
+    "prettier": "^1.17.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/preset-typescript": "^7.3.3"
+    "@babel/preset-typescript": "^7.3.3",
+    "eslint": "^5.16.0",
+    "typescript": "~3.4.5"
   }
 }
