--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,3 @@
 {
-  "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "jsx": "react-native",
-    "lib": [
-      "es2016"  
-    ],
-    "moduleResolution": "node",
-    "noEmit": true,
-    "strict": true,
-    "target": "es2016",
-    "baseUrl": "src"
-  },
-  "exclude": ["node_modules"]
+  "extends": "./ts"
 }
