--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,19 @@
 {
-  "extends": "./ts"
+  "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "jsx": "react",
+    "lib": [
+      "es2016"
+    ],
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "target": "es2016",
+    "baseUrl": "src"
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
