--- a/package.json
+++ b/package.json
@@ -21,25 +21,26 @@
   },
   "homepage": "https://github.com/choicetopay/choice-js#readme",
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.4.5",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-typescript": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.17.1"
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^1.18.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "eslint": "^5.16.0",
-    "typescript": "~3.4.5"
+    "@babel/cli": "^7.6.0",
+    "eslint": "^6.4.0",
+    "typescript": "^3.6.3"
   }
 }
